fixed bad default value for gridlayout spacing (vertical was 0)
svn changeset:5994/svn branch:trunk

--- a/WebContent/ITMILL/themes/default/gridlayout/gridlayout.css
+++ b/WebContent/ITMILL/themes/default/gridlayout/gridlayout.css
@@ -18,7 +18,7 @@
  */
 .i-gridlayout-spacing-element {
 	padding-left:8px;
-	padding-left:8px;
+	padding-top:8px;
 }
 
 
