--- a/WebContent/ITMILL/themes/default/styles.css
+++ b/WebContent/ITMILL/themes/default/styles.css
@@ -761,7 +761,7 @@ input.i-modified,
  */
 .i-gridlayout-spacing-element {
 	padding-left:8px;
-	padding-left:8px;
+	padding-top:8px;
 }
 
 
